--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html.dark {
 html.dark {
 	background-color: #111;
 	color: var(--primary-color);
+	box-shadow: 0px 5px 30px rgb(0, 0, 0);
 }
 
 body {
@@ -39,10 +40,16 @@ body {
 	background-color: var(--primary-color);
 	color: var(--secondary-color); 
 	border: 0;
-	border-radius: 4px;
-	padding: 8px 12px;
+	height: 80px;
+	width: 80px;
+	border-radius: 50%;
 	position: absolute;
-	top: 100px;
+	box-shadow: 0px 5px 25px rgb(233, 233, 219);
+	font-size: 15px;
+	font-weight: bolder;
+	position: fixed;
+	top: -20px;
+	left: -10px;
 }
 
 .toggle:focus {
@@ -70,6 +77,7 @@ body {
 	height: 65px;
 	width: 3px;
 	transform-origin: bottom center;
+	transition: all 0.5s ease-in;
 }
 
 .needle.hour {
@@ -82,7 +90,7 @@ body {
 }
 
 .needle.second {
-	transform: translate(-50%, -100%) rotate(30deg);
+	transform: translate(-50%, -100%) rotate(0deg);
 	height: 100px;
 	background-color: #a606bb;
 }
